added mgmt ldap module to automate access to the management webapp

--- a/cas-management-webapp/build.gradle
+++ b/cas-management-webapp/build.gradle
@@ -33,6 +33,7 @@ war {
 dependencies {
     compile libraries.springboot
     runtime project(':cas-management-webapp-support')
+    runtime project(':cas-management-webapp-support-ldap')
     providedRuntime libraries.springboottomcat
     runtime libraries.hibernate
     runtime libraries.groovy
