--- a/cas-management-webapp/src/main/resources/application.properties
+++ b/cas-management-webapp/src/main/resources/application.properties
@@ -50,10 +50,40 @@ server.session.cookie.http-only=true
 server.session.tracking-modes=COOKIE
 
 ##
+# Management Authorization Rules
+#
 # User details file location that contains list of users
 # who are allowed access to the management webapp:
 # 
 # user.details.file.location=classpath:user-details.properties
+#
+#
+# LDAP Authorization
+#
+# ldap.url=
+# ldap.baseDn=
+# ldap.user.searchFilter=
+# ldap.user.attributes=
+# ldap.role.baseDn=
+# ldap.role.searchFilter=
+# ldap.role.attributes=
+
+# ldap.pool.blockWaitTime=5000
+# ldap.pool.validateOnCheckout=true
+# ldap.pool.validatePeriodically=true
+# ldap.pool.validatePeriod=5000
+# ldap.pool.idleTime=5000
+# ldap.pool.maxSize=1
+# ldap.pool.minSize=1
+# ldap.pool.prunePeriod=10000
+# ldap.connectTimeout=5000
+# ldap.useStartTLS=false
+# ldap.use.ssl=false
+#
+# ldap.authorizationgenerator.user.attr=uid
+# ldap.authorizationgenerator.role.attr=roleAttributeName
+# ldap.authorizationgenerator.role.prefix=ROLE_
+# ldap.authorizationgenerator.allow.multiple=false
 
 ##
 # JSON Service Registry
