added mgmt ldap module to automate access to the management webapp

--- a/cas-management-webapp/src/main/resources/application.properties
+++ b/cas-management-webapp/src/main/resources/application.properties
@@ -60,14 +60,10 @@ server.session.tracking-modes=COOKIE
 #
 # LDAP Authorization
 #
-# ldap.url=
-# ldap.baseDn=
-# ldap.user.searchFilter=
-# ldap.user.attributes=
-# ldap.role.baseDn=
-# ldap.role.searchFilter=
-# ldap.role.attributes=
-
+# ldap.url=ldap://localhost:1389
+# ldap.baseDn=dc=example,dc=org
+# ldap.user.searchFilter=cn={0}
+#
 # ldap.pool.blockWaitTime=5000
 # ldap.pool.validateOnCheckout=true
 # ldap.pool.validatePeriodically=true
@@ -80,8 +76,7 @@ server.session.tracking-modes=COOKIE
 # ldap.useStartTLS=false
 # ldap.use.ssl=false
 #
-# ldap.authorizationgenerator.user.attr=uid
-# ldap.authorizationgenerator.role.attr=roleAttributeName
+# ldap.authorizationgenerator.role.attribute=sn
 # ldap.authorizationgenerator.role.prefix=ROLE_
 # ldap.authorizationgenerator.allow.multiple=false
 
