initial yaml svc registry

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,6 +25,7 @@ include 'cas-server-core'
 include 'cas-server-documentation'
 include 'cas-server-support-events-mongo'
 include 'cas-server-support-events-jpa'
+include 'cas-server-support-yaml-service-registry'
 include 'cas-server-support-generic'
 include 'cas-server-support-generic-remote-webflow'
 include 'cas-server-support-jdbc'
