fixed test cases

--- a/cas-server-support-ldap/src/test/resources/ldap.properties
+++ b/cas-server-support-ldap/src/test/resources/ldap.properties
@@ -58,10 +58,8 @@ ldap.resolver.searchFilter=sAMAccountName={0}
 # User Details
 #========================================
 ldap.role.baseDn=ou=people,dc=example,dc=org
-ldap.role.searchFilter=&(objectclass=casServiceUserDetails)(member={0})
 ldap.user.searchFilter=&(objectclass=casServiceUserDetails)(mail={0})
-ldap.authorizationgenerator.role.attr=uugid
-ldap.authorizationgenerator.user.attr=mail
+ldap.authorizationgenerator.role.attribute=uugid
 
 #========================================
 # Registered Service
