--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ description = "Apereo Central Authentication Service $version"
 
 defaultTasks "clean", "build"
 
+
 ext {
     publishSnapshots = Boolean.getBoolean("publishSnapshots")
     publishReleases = Boolean.getBoolean("publishReleases")
@@ -265,6 +266,12 @@ subprojects {
 
     ext.libraries = rootProject.ext.libraries;
 
+    /*
+    Don't publish test dependencies into the final POM.
+    */
+    conf2ScopeMappings.mappings.remove(configurations.findByName("testCompile"))
+    conf2ScopeMappings.mappings.remove(configurations.findByName("testRuntime"))
+    
     repositories {
         mavenLocal()
         mavenCentral()
