Ported audit principal changes back from master into 4.2

--- a/cas-server-webapp/src/main/webapp/WEB-INF/cas.properties
+++ b/cas-server-webapp/src/main/webapp/WEB-INF/cas.properties
@@ -286,7 +286,7 @@ server.prefix=${server.name}/cas
 ##
 # Accepted Users Authentication
 #
-accept.authn.users=casTest::Mellon
+accept.authn.users=casuser::Mellon
 
 ##
 # Rejected Users Authentication
