--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,13 @@ subprojects {
     apply plugin: 'project-report'
     apply from: rootProject.file("gradle/tasks.gradle")
 
+    /*
+    Don't publish test dependencies into the final POM.
+    */
+    conf2ScopeMappings.mappings.remove(configurations.findByName("testCompile"))
+    conf2ScopeMappings.mappings.remove(configurations.findByName("testRuntime"))
+
+    
     repositories {
         mavenLocal()
         mavenCentral()
