Removing Component annotations in favor @Bean

--- a/cas-server-support-geolocation/build.gradle
+++ b/cas-server-support-geolocation/build.gradle
@@ -3,5 +3,6 @@ description = 'Apereo CAS GeoLocation Tracking Support'
 dependencies {
     compile libraries.maxmind
     compile libraries.spring
+    compile libraries.springcloud
 }
 
