--- a/settings.gradle
+++ b/settings.gradle
@@ -22,6 +22,7 @@ include 'cas-server-core-validation'
 include 'cas-server-core-events'
 include 'cas-server-core-audit'
 include 'cas-server-core'
+include 'cas-server-core-configuration'
 include 'cas-server-documentation'
 include 'cas-server-support-events-mongo'
 include 'cas-server-support-events-jpa'
@@ -107,3 +108,5 @@ include 'cas-server-webapp'
 include 'cas-management-webapp'
 include 'cas-management-webapp-support'
 include 'cas-management-webapp-support-ldap'
+include 'cas-server-core-configuration'
+
