added docs to the shell module. fixed build failures

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -887,8 +887,16 @@ spring.aop.proxy-target-class=true
 ##
 # CAS Groovy Shell Console
 #
-# cas.console.scripts.location:classpath:/scripts
-# cas.console.socket.port=6789
+# shell.command-refresh-interval=15
+# shell.command-path-patterns=classpath*:/commands/**
+# shell.auth.simple.user.name=
+# shell.auth.simple.user.password=
+# shell.ssh.enabled=true
+# shell.ssh.port=2000
+# shell.telnet.enabled=false
+# shell.telnet.port=5000
+# shell.ssh.auth-timeout=3000
+# shell.ssh.idle-timeout=30000
 
 ##
 # Multifactor Authentication Settings
