Initial pass at prototyping config props with nested classes approach

--- a/cas-server-core-authentication/build.gradle
+++ b/cas-server-core-authentication/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     compile project(':cas-server-core-api-services')
     compile project(':cas-server-core-api-ticket')
     compile project(':cas-server-core-util')
+    compile project(':cas-server-core-configuration')
     compile libraries.metrics
     compile libraries.inspektr
     compile libraries.persondirectory
