Get rid of custom groovy console; use Spring Boot remote shell instead (#1815)
* Get rid of custom groovy console; use Spring Boot remote shell instead

* added docs to the shell module. fixed build failures

* doc update

* fix docs

* fix docs

--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -900,7 +900,19 @@ ext.libraries = [
                     force = true
                 }
         ],
-
+        springbootremoteshell : [
+                dependencies.create("org.springframework.boot:spring-boot-starter-remote-shell:$springBootVersion") {
+                    exclude(group: 'org.springframework', module: 'spring-core')
+                    exclude(group: 'org.springframework', module: 'spring-context-support')
+                    exclude(group: 'org.springframework', module: 'spring-context')
+                    exclude(group: 'org.slf4j', module: 'slf4j-api')
+                    exclude(group: 'commons-logging', module: 'commons-logging')
+                    exclude(group: 'org.bouncycastle', module: 'bcprov-jdk15on')
+                    exclude(group: 'org.bouncycastle', module: 'bcpkix-jdk15on')
+                    exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-logging')
+                    force = true
+                }
+        ],
         springcloud      : [
                 dependencies.create("org.springframework.cloud:spring-cloud-config-client:$springCloudConfigClientVersion") {
                     exclude(group: 'org.springframework', module: 'spring-web')
