--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -5,6 +5,7 @@ ext['hibernate.version'] = "$hibernateVersion"
 ext['hazelcast.version'] = "$hazelcastVersion"
 ext['spring-session.version'] = "$springSessionVersion"
 ext['tomcat.version'] = "$springBootTomcatVersion"
+ext['infinispan.version'] = "$infinispanVersion"
 
 ext.libraries = [
         aspectj          : [
@@ -338,16 +339,19 @@ ext.libraries = [
                     exclude(group: 'org.iq80.leveldb', module: 'leveldb-api')
                     exclude(group: 'org.fusesource.leveldbjni', module: 'leveldbjni')
                     exclude(group: 'org.jboss.logging', module: 'jboss-logging')
+                    exclude(group: 'commons-cli', module: 'commons-cli')
                     force = true
                 },
                 dependencies.create("org.infinispan:infinispan-commons:$infinispanVersion") {
                     exclude(group: 'com.google.guava', module: 'guava')
                     exclude(group: 'org.jboss.logging', module: 'jboss-logging')
+                    exclude(group: 'commons-cli', module: 'commons-cli')
                     force = true
                 },
                 dependencies.create("org.infinispan:infinispan-core:$infinispanVersion") {
                     exclude(group: 'com.google.guava', module: 'guava')
                     exclude(group: 'org.jboss.logging', module: 'jboss-logging')
+                    exclude(group: 'commons-cli', module: 'commons-cli')
                     force = true
                 },
                 dependencies.create("org.infinispan:infinispan-embedded:$infinispanVersion") {
@@ -355,6 +359,7 @@ ext.libraries = [
                     exclude(group: 'org.iq80.leveldb', module: 'leveldb-api')
                     exclude(group: 'org.fusesource.leveldbjni', module: 'leveldbjni')
                     exclude(group: 'org.jboss.logging', module: 'jboss-logging')
+                    exclude(group: 'commons-cli', module: 'commons-cli')
                     force = true
                 }
         ],
