update infinispan version

--- a/gradle.properties
+++ b/gradle.properties
@@ -110,7 +110,7 @@ kryoSerializersVersion=0.37
 ehcacheVersion=2.10.2
 jcacheVersion=1.0.1
 
-hsqlVersion=2.3.3
+hsqlVersion=2.3.4
 hikariVersion=2.4.6
 
 shiroVersion=1.2.4
@@ -135,3 +135,6 @@ igniteVersion=1.6.0
 infinispanVersion=8.2.2.Final
 
 spockVersion=1.0-groovy-2.4
+
+# Used by VersionEye to keep track of dependency versions
+versioneye.projectid=5677b4a5107997002d00131b
