--- a/cas-server-support-jpa-ticket-registry/build.gradle
+++ b/cas-server-support-jpa-ticket-registry/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     compile project(':cas-server-core-util')
     compile project(':cas-server-support-jpa-util')
     compile project(':cas-server-support-oauth-core')
+    compile project(':cas-server-core-configuration')
     compile libraries.spring
     compile libraries.quartz
     compile libraries.hibernate    
