--- a/cas-server-core-configuration/build.gradle
+++ b/cas-server-core-configuration/build.gradle
@@ -1,7 +1,5 @@
 description = 'Apereo CAS central configuration module providing type-safe configuration domain model to the rest of CAS server'
 dependencies {
-    //compile libraries.spring
-    //compile libraries.springcloud
     compile libraries.springboot
-
+    compile libraries.hibernate
 }
