--- a/cas-server-support-jpa-service-registry/build.gradle
+++ b/cas-server-support-jpa-service-registry/build.gradle
@@ -3,6 +3,7 @@ dependencies {
 
     compile project(':cas-server-core-services')
     compile project(':cas-server-support-jpa-util')
+    compile project(':cas-server-core-configuration')
     compile libraries.spring
     compile libraries.quartz
     compile libraries.hibernate    
