changes for ams rollback

--- a/build.gradle
+++ b/build.gradle
@@ -277,7 +277,7 @@ subprojects {
 			exclude group: 'xml-security', module: 'xmlsec'
 			exclude group: 'org.springframework'
 			exclude group: 'wavity-ams'
-//			exclude group: 'wavity-cas-client'
+			exclude group: 'wavity-cas-client'
 			exclude group: 'wavity-rest-client'
 		}
 
