Refactor svc registry initializer config with type-safe config model

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -82,7 +82,6 @@ server.session.tracking-modes=COOKIE
 # ticketreg.database.pool.maxWait=10000
 # ticketreg.database.pool.maxWait=10000
 # ticketreg.database.pool.maxIdleTime=120
-# ticketreg.database.jpa.locking.tgt.enabled=true
 
 ##
 # JPA Service Registry Database Configuration
@@ -98,7 +97,7 @@ server.session.tracking-modes=COOKIE
 # svcreg.database.pool.maxWait=10000
 # svcreg.database.pool.maxIdleTime=120
 # svcreg.database.autocommit=false
-# svcreg.database.initFromJsonIfAvailable=true
+# svcreg.database.initFromJson=true
 
 ##
 # CAS SSO Cookie Generation & Security
@@ -509,7 +508,7 @@ accept.authn.users=casuser::Mellon
 
 ##
 # Auto-initialize services registry database from JSON services
-# svcreg.database.from.json=true
+# service.registry.initFromJson=true
 
 ##
 # Background Scheduler
