--- a/cas-server-core-services/build.gradle
+++ b/cas-server-core-services/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     compile project(':cas-server-core-util')
     compile project(':cas-server-core-events')
     compile project(':cas-server-core-web')
+    compile project(':cas-server-core-configuration')
     testCompile project(path: ":cas-server-core-util", configuration: "tests")
     testCompile project(':cas-server-core-authentication')
     testCompile project(':cas-server-core-logout')
