Type-safe config model for core svc registry. WIP...

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -501,10 +501,10 @@ accept.authn.users=casuser::Mellon
 
 ##
 # Force a startup delay of 2 minutes.
-# service.registry.quartz.reloader.startDelay=120000
+# service.registry.quartzReloader.startDelay=120000
 #
 # Reload services every 2 minutes
-# service.registry.quartz.reloader.repeatInterval=120000
+# service.registry.quartzReloader.repeatInterval=120000
 
 ##
 # Auto-initialize services registry database from JSON services
