--- a/cas-server-support-cookie/build.gradle
+++ b/cas-server-support-cookie/build.gradle
@@ -5,5 +5,6 @@ dependencies {
     compile libraries.thmyeleaf
     compile project(':cas-server-core-util')
     compile project(':cas-server-core-web')
+    compile project(':cas-server-core-configuration')
 }
 
