--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -97,7 +97,6 @@ server.session.tracking-modes=COOKIE
 # svcreg.database.pool.maxWait=10000
 # svcreg.database.pool.maxIdleTime=120
 # svcreg.database.autocommit=false
-# svcreg.database.initFromJson=true
 
 ##
 # CAS SSO Cookie Generation & Security
@@ -126,7 +125,7 @@ server.session.tracking-modes=COOKIE
 # tgc.domain=
 
 # The expiration value of the SSO cookie for long-term authentications
-# tgc.remember.me.maxAge=1209600
+# tgc.rememberMeMaxAge=1209600
 
 # Decides whether SSO Warning cookie should be created only under secure connections.
 # warn.cookie.secure=true
