--- a/cas-management-webapp/src/main/resources/application.properties
+++ b/cas-management-webapp/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.profiles.active=default
 # CAS
 #
 cas.host=https://jasigcas.herokuapp.com
-cas.prefix=${cas.host}
+cas.prefix=${cas.host}/cas
 cas.securityContext.casProcessingFilterEntryPoint.loginUrl=${cas.prefix}/login
 
 ##
