--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -104,10 +104,10 @@ server.session.tracking-modes=COOKIE
 # Do note that the following settings MUST be generated per deployment.
 #
 # The encryption secret key. By default, must be a octet string of size 256.
-# tgc.encryption.key=
+# tgc.encryptionKey=
 #
 # The signing secret key. By default, must be a octet string of size 512.
-# tgc.signing.key=
+# tgc.signingKey=
 
 # Decides whether SSO cookie should be created only under secure connections.
 # tgc.secure=true
