Type-safe config model for SSO

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -178,10 +178,10 @@ cas.attrs.resolve.affiliation=groupMembership
 # Single Sign-On Session
 #
 # Indicates whether an SSO session should be created for renewed authentication requests.
-# create.sso.renewed.authn=true
+# create.sso.renewedAuthn=true
 #
 # Indicates whether an SSO session can be created if no service is present.
-# create.sso.missing.service=true
+# create.sso.missingService=true
 
 ##
 # CAS Authentication Policy
