--- a/cas-server-support-actions/build.gradle
+++ b/cas-server-support-actions/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     compile project(':cas-server-core-authentication')
     compile project(':cas-server-core-tickets')
     compile project(':cas-server-core-services')
+    compile project(':cas-server-core-configuration')
     compile libraries.spring
     runtime libraries.hibernate
     testCompile project(':cas-server-core')
