Type-safe config model for persondir principal resolver

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -193,8 +193,8 @@ cas.attrs.resolve.affiliation=groupMembership
 ##
 # CAS PersonDirectory Principal Resolution
 #
-# cas.principal.resolver.persondir.principal.attribute=cn
-# cas.principal.resolver.persondir.return.null=false
+# cas.principal.resolver.persondir.principalAttribute=cn
+# cas.principal.resolver.persondir.returnNull=false
 
 ##
 # CAS Internationalization
