--- a/cas-server-core/build.gradle
+++ b/cas-server-core/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     compile project(':cas-server-core-tickets')
     compile project(':cas-server-core-validation')
     compile project(':cas-server-core-authentication')
+    compile project(':cas-server-core-configuration')
     compile libraries.inspektr
     compile libraries.metrics
     compile libraries.persondirectory
