Type-safe config model for authn policy

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -186,9 +186,9 @@ cas.attrs.resolve.affiliation=groupMembership
 ##
 # CAS Authentication Policy
 #
-# cas.authn.policy.any.tryall=false
-# cas.authn.policy.req.tryall=false
-# cas.authn.policy.req.handlername=handlerName
+# cas.authn.policy.any.tryAll=false
+# cas.authn.policy.req.tryAll=false
+# cas.authn.policy.req.handlerName=handlerName
 
 ##
 # CAS PersonDirectory Principal Resolution
