Type-safe config model for locale

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -199,8 +199,8 @@ cas.attrs.resolve.affiliation=groupMembership
 ##
 # CAS Internationalization
 #
-# locale.default=en
-# locale.param.name=locale
+# locale.defaultValue=en
+# locale.paramName=locale
 # message.bundle.encoding=UTF-8
 # message.bundle.cacheseconds=180
 # message.bundle.fallback.systemlocale=false
