Type-safe config model for message bundle

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -202,10 +202,10 @@ cas.attrs.resolve.affiliation=groupMembership
 # locale.defaultValue=en
 # locale.paramName=locale
 # message.bundle.encoding=UTF-8
-# message.bundle.cacheseconds=180
-# message.bundle.fallback.systemlocale=false
-# message.bundle.usecode.message=true
-# message.bundle.basenames=classpath:custom_messages,classpath:messages
+# message.bundle.cacheSeconds=180
+# message.bundle.fallbackSystemLocale=false
+# message.bundle.useCodeMessage=true
+# message.bundle.baseNames=classpath:custom_messages,classpath:messages
 
 ##
 # CAS Authentication Throttling
