Type-safe config model for throttling. WIP...

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -210,12 +210,12 @@ cas.attrs.resolve.affiliation=groupMembership
 ##
 # CAS Authentication Throttling
 #
-# cas.throttle.failure.threshold=
-# cas.throttle.failure.range.seconds=
-# cas.throttle.username.parameter=
+#cas.throttle.authn.failure.code=
+#cas.throttle.failure.threshold=
+# cas.throttle.failure.rangeSeconds=
+# cas.throttle.usernameParameter=
 # cas.throttle.appcode=
-# cas.throttle.authn.failurecode=
-# cas.throttle.audit.query=
+# cas.throttle.auditQuery=
 
 ##
 # CAS Health Monitoring
