--- a/cas-server-webapp/package.json
+++ b/cas-server-webapp/package.json
@@ -22,9 +22,11 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^2.2.0",
     "bootstrap-sass": "~> 3.3.6",
-    "yargs": "^4.7.0"
+    "yargs": "^4.7.0",
+    "gulp-autoprefixer": "^3.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+  },
   "scripts": {
     "gulp": "gulp"
   },
