--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -42,6 +42,7 @@ spring.cloud.bus.ack.enabled=true
 #
 # Protect the sensitive admin endpoints via an IP pattern
 # cas.securityContext.adminpages.ip=127\.0\.0\.1
+cas.securityContext.adminpages.ip=.+
 #
 # Protect sub endpoints via the CAS server itself.
 # cas.securityContext.adminpages.users=classpath:user-details.properties
