--- a/cas-server-core-monitor/build.gradle
+++ b/cas-server-core-monitor/build.gradle
@@ -2,6 +2,7 @@ description = 'Apereo CAS Core Monitor Support'
 dependencies {
     compile project(':cas-server-core-api-monitor')
     compile project(':cas-server-core-api-ticket')
+    compile project(':cas-server-core-configuration')
     compile libraries.spring
     compile libraries.springcloud
     testCompile project(':cas-server-core-tickets')
