--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -222,7 +222,7 @@ cas.attrs.resolve.affiliation=groupMembership
 #
 # cas.monitor.st.warn.threshold=5000
 # cas.monitor.tgt.warn.threshold=10000
-# cas.monitor.free.mem.threshold=10
+# cas.monitor.freeMemThreshold=10
 
 ##
 # CAS Events
