Polishing Jpa config

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -227,12 +227,12 @@ cas.attrs.resolve.affiliation=groupMembership
 ##
 # CAS Events
 #
-# events.track.geolocation=false
+# events.trackGeolocation=false
 
 ##
 # CAS Events MongoDb
 #
-# mongodb.events.clienturi=mongodb://uri
+# events.mongodb.clienturi=mongodb://uri
 # mongodb.events.dropcollection=false
 # mongodb.events.collection=collectionName
 
