Type-safe config model for events

--- a/cas-server-core-configuration/build.gradle
+++ b/cas-server-core-configuration/build.gradle
@@ -1,5 +1,6 @@
 description = 'Apereo CAS central configuration module providing type-safe configuration domain model to the rest of CAS server'
 dependencies {
     compile libraries.springboot
+    compile libraries.spring
     compile libraries.hibernate
 }
