--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -257,7 +257,8 @@ cas.attrs.resolve.affiliation=groupMembership
 # mongodb.port=mongodb database port
 # mongodb.userId=mongodb userid to bind
 # mongodb.userPassword=mongodb password to bind
-# cas.service.registry.mongo.db=Collection name to store service definitions
+# mongodb.serviceRegistryCollection=Collection name to store service definitions
+# cas.service.registry.mongo.db=Collection name to store service definitions //TODO remove this prop once refactored with the one above
 # mongodb.timeout=5000
 
 ##
