Type-safe config model for events

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -232,9 +232,9 @@ cas.attrs.resolve.affiliation=groupMembership
 ##
 # CAS Events MongoDb
 #
-# events.mongodb.clienturi=mongodb://uri
-# mongodb.events.dropcollection=false
-# mongodb.events.collection=collectionName
+# events.mongodb.clientUri=mongodb://uri
+# events.mongodb.dropCollection=false
+# events.mongodb.collection=MongoDbCasEventRepository
 
 ##
 # CAS Events JPA
