--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -253,13 +253,13 @@ cas.attrs.resolve.affiliation=groupMembership
 ##
 # CAS MongoDB Service Registry
 #
-# mongodb.host=mongodb database url
-# mongodb.port=mongodb database port
-# mongodb.userId=mongodb userid to bind
-# mongodb.userPassword=mongodb password to bind
-# mongodb.serviceRegistryCollection=Collection name to store service definitions
+# svcreg.mongodb.host=mongodb database url
+# svcreg.mongodb.port=mongodb database port
+# svcreg.mongodb.userId=mongodb userid to bind
+# svcreg.mongodb.userPassword=mongodb password to bind
+# svcreg.mongodb.serviceRegistryCollection=Collection name to store service definitions
 # cas.service.registry.mongo.db=Collection name to store service definitions //TODO remove this prop once refactored with the one above
-# mongodb.timeout=5000
+# svcreg.mongodb.timeout=5000
 
 ##
 # Spring Webflow Web Application Session
