Type-safe config model for mongo service registry

--- a/cas-server-core-configuration/build.gradle
+++ b/cas-server-core-configuration/build.gradle
@@ -3,4 +3,5 @@ dependencies {
     compile libraries.springboot
     compile libraries.spring
     compile libraries.hibernate
+    compile libraries.mongo
 }
