--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -258,7 +258,7 @@ cas.attrs.resolve.affiliation=groupMembership
 # svcreg.mongodb.userId=mongodb userid to bind
 # svcreg.mongodb.userPassword=mongodb password to bind
 # svcreg.mongodb.serviceRegistryCollection=Collection name to store service definitions
-# cas.service.registry.mongo.db=Collection name to store service definitions //TODO remove this prop once refactored with the one above
+# svcreg.mongodb.dropCollection=false
 # svcreg.mongodb.timeout=5000
 
 ##
