Type-safe config model for webflow

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -264,14 +264,14 @@ cas.attrs.resolve.affiliation=groupMembership
 ##
 # Spring Webflow Web Application Session
 #
-# webflow.always.pause.redirect=false
-# webflow.redirect.same.state=false
+# webflow.alwaysPauseRedirect=false
+# webflow.redirectSameState=false
 #
 # Use container session when managing SWF execution state
 # webflow.session.storage=true
 #
-# webflow.session.lock.timeout=30
-# webflow.session.max.conversations=5
+# webflow.session.lockTimeout=30
+# webflow.session.max.maxConversations=5
 # webflow.session.compress=false
 #
 # Spring Webflow Web Application Session Managed by Redis
@@ -280,7 +280,7 @@ cas.attrs.resolve.affiliation=groupMembership
 # spring.redis.port=16216
 #
 # Spring Webflow Web Application Session Managed by Hazelcast
-# webflow.session.hz.location=classpath:/hazelcast.xml
+# webflow.session.hzLocation=classpath:/hazelcast.xml
 #
 # Spring Webflow Web Application Session Managed by Mongo
 # spring.data.mongodb.host=
@@ -297,17 +297,17 @@ cas.attrs.resolve.affiliation=groupMembership
 #
 # The encryption secret key. Must be 16 characters long.
 # webflow.encryption.key=
-# webflow.encryption.key.size=16
+# webflow.encryption.keySize=16
 #
 # The signing secret key. By default, must be a octet string of size 512.
 # webflow.signing.key=
-# webflow.signing.key.size=512
+# webflow.signing.keySize=512
 #
 # The algorithm used for secret keys
 # webflow.secretkey.alg=AES
 #
 # Allow CAS to autoconfigure webflow
-# webflow.autoconfigure=true
+# webflow.autoConfigure=true
 #
 # Hot reload Spring webflow configuration
 # webflow.refresh=true
