Refactor abstract Config props

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -315,14 +315,14 @@ cas.attrs.resolve.affiliation=groupMembership
 ##
 # Remote User Authentication
 #
-# ip.address.range=
+# remote.authn.ipAddressRange=
 
 ##
 # Apache Shiro Authentication
 #
 # shiro.authn.requiredRoles=
 # shiro.authn.requiredPermissions=
-# shiro.authn.config.file=classpath:shiro.ini
+# shiro.authn.configLocation=classpath:shiro.ini
 
 ##
 # YubiKey Authentication
