Type-safe config model for support-generic(Shiro authn)

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -322,7 +322,7 @@ cas.attrs.resolve.affiliation=groupMembership
 #
 # shiro.authn.requiredRoles=
 # shiro.authn.requiredPermissions=
-# shiro.authn.config.ocation=classpath:shiro.ini
+# shiro.authn.config.location=classpath:shiro.ini
 
 ##
 # YubiKey Authentication
