Type-safe config model for mfa(yubikey)

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -327,9 +327,9 @@ cas.attrs.resolve.affiliation=groupMembership
 ##
 # YubiKey Authentication
 #
-# cas.mfa.yubikey.client.id=
-# cas.mfa.yubikey.secret.key=
-# cas.mfa.yubikey.rank = 0
+# cas.mfa.yubikey.clientId=
+# cas.mfa.yubikey.secretKey=
+# cas.mfa.yubikey.rank=0
 
 ##
 # JDBC Authentication
