--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -502,10 +502,10 @@ accept.authn.users=casuser::Mellon
 
 ##
 # Force a startup delay of 2 minutes.
-# service.registry.quartzReloader.startDelay=120000
+# service.registry.startDelay=120000
 #
 # Reload services every 2 minutes
-# service.registry.quartzReloader.repeatInterval=120000
+# service.registry.repeatInterval=120000
 
 ##
 # Auto-initialize services registry database from JSON services
@@ -608,6 +608,17 @@ spring.aop.proxy-target-class=true
 # cas.samlidp.attribute.friendly.name=true
 
 ##
+# SAML MDUI Display Adapter
+#
+# cas.saml.mdui.startDelay=20000
+# cas.saml.mdui.repeatInterval=60000
+# cas.saml.mduiparameter=entityId
+# cas.saml.mdui.maxValidity=0
+# cas.saml.mdui.requireSignedRoot=false
+# cas.saml.mdui.requireValidMetadata=true
+# cas.saml.mdui.resources=resource::key,resource::key
+
+##
 # Default Ticket Registry
 #
 # default.ticket.registry.initialcapacity=1000
@@ -619,8 +630,8 @@ spring.aop.proxy-target-class=true
 #
 # Indicates how frequently the Ticket Registry cleaner should run. Configured in seconds.
 # ticket.registry.cleaner.enabled=true
-# ticket.registry.cleaner.startdelay=20
-# ticket.registry.cleaner.repeatinterval=5000
+# ticket.registry.cleaner.startDelay=20000
+# ticket.registry.cleaner.repeatInterval=10000
 
 ##
 # Ticket ID Generation
