--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -210,12 +210,14 @@ cas.attrs.resolve.affiliation=groupMembership
 ##
 # CAS Authentication Throttling
 #
-#cas.throttle.authn.failure.code=
-#cas.throttle.failure.threshold=
+# cas.throttle.authn.failure.code=
+# cas.throttle.failure.threshold=
 # cas.throttle.failure.rangeSeconds=
 # cas.throttle.usernameParameter=
 # cas.throttle.appcode=
 # cas.throttle.auditQuery=
+# cas.throttle.startDelay=20000
+# cas.throttle.repeatInterval=30000
 
 ##
 # CAS Health Monitoring
