--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -82,7 +82,7 @@ server.session.tracking-modes=COOKIE
 # ticketreg.database.pool.maxWait=10000
 # ticketreg.database.pool.maxWait=10000
 # ticketreg.database.pool.maxIdleTime=120
-# ticketreg.database.jpaLockingTgtEnabled:true
+# ticketreg.database.jpaLockingTgtEnabled=true
 
 ##
 # JPA Service Registry Database Configuration
